--- a/Lab104/FlashCards/FlashCards/Base.lproj/Main.storyboard
+++ b/Lab104/FlashCards/FlashCards/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FlashCards" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MpD-C5-wDW">
+                                <rect key="frame" x="20" y="60" width="560" height="54"/>
+                                <color key="backgroundColor" red="1" green="0.92949859489838449" blue="0.73240264053043802" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="OLF-f2-ZXg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1R-fv-NpO">
+                                <rect key="frame" x="20" y="146" width="560" height="70"/>
+                                <color key="backgroundColor" red="0.96640822047647013" green="1" blue="0.97500469907862475" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="Ivv-t6-nMO"/>
+                                </constraints>
+                                <state key="normal" title="Show Question"/>
+                                <connections>
+                                    <action selector="showQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Dr-To-MLT"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIh-Cd-01I">
+                                <rect key="frame" x="20" y="250" width="560" height="54"/>
+                                <color key="backgroundColor" red="1" green="0.92949859489838449" blue="0.73240264053043802" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="aQG-Xe-gXk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eoJ-Lw-0XF">
+                                <rect key="frame" x="20" y="336" width="560" height="70"/>
+                                <color key="backgroundColor" red="0.96640822047647013" green="1" blue="0.97500469907862475" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Show Answer"/>
+                                <connections>
+                                    <action selector="showAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YPe-sI-oia"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95360498453325537" green="1" blue="0.89557157729261649" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="eoJ-Lw-0XF" firstAttribute="top" secondItem="yIh-Cd-01I" secondAttribute="bottom" constant="32" id="38L-pK-XPE"/>
+                            <constraint firstItem="MpD-C5-wDW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="4Qh-mv-HKX"/>
+                            <constraint firstItem="yIh-Cd-01I" firstAttribute="trailing" secondItem="eoJ-Lw-0XF" secondAttribute="trailing" id="7qN-9d-C9l"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eoJ-Lw-0XF" secondAttribute="bottom" constant="194" id="Om6-6g-dRJ"/>
+                            <constraint firstItem="MpD-C5-wDW" firstAttribute="leading" secondItem="B1R-fv-NpO" secondAttribute="leading" id="bEn-yW-Gq8"/>
+                            <constraint firstItem="MpD-C5-wDW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="f6Z-TQ-wn2"/>
+                            <constraint firstItem="B1R-fv-NpO" firstAttribute="trailing" secondItem="yIh-Cd-01I" secondAttribute="trailing" id="kgm-TB-zsk"/>
+                            <constraint firstItem="yIh-Cd-01I" firstAttribute="top" secondItem="B1R-fv-NpO" secondAttribute="bottom" constant="34" id="kj7-AD-ZbL"/>
+                            <constraint firstItem="B1R-fv-NpO" firstAttribute="leading" secondItem="yIh-Cd-01I" secondAttribute="leading" id="pLa-DK-Pdn"/>
+                            <constraint firstItem="MpD-C5-wDW" firstAttribute="trailing" secondItem="B1R-fv-NpO" secondAttribute="trailing" id="qkG-YW-bDN"/>
+                            <constraint firstItem="yIh-Cd-01I" firstAttribute="leading" secondItem="eoJ-Lw-0XF" secondAttribute="leading" id="xJe-nL-jDy"/>
+                            <constraint firstItem="MpD-C5-wDW" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="xZT-KL-P1x"/>
+                            <constraint firstItem="B1R-fv-NpO" firstAttribute="top" secondItem="MpD-C5-wDW" secondAttribute="bottom" constant="32" id="zb0-dO-nQi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="answerLabel" destination="yIh-Cd-01I" id="Qn4-9R-zWy"/>
+                        <outlet property="questionLabel" destination="MpD-C5-wDW" id="CXo-9S-7sP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="362"/>
         </scene>
     </scenes>
 </document>
